--- a/LabSem3/Views/Complaint/Details.cshtml
+++ b/LabSem3/Views/Complaint/Details.cshtml
@@ -224,7 +224,11 @@
 <p>
     @if (User.IsInRole("ADMIN") | User.IsInRole("INSTRUCTOR") | User.IsInRole("TECHNICAL_STAFF"))
     {
-        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) <span> | </span>
+        if (Model.Status == 2)
+        {
+            @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) <span> | </span>
+        }
+
     }
     @Html.ActionLink("Back to List", "Index")
 </p>
