--- a/LabSem3/Views/Complaint/Index.cshtml
+++ b/LabSem3/Views/Complaint/Index.cshtml
@@ -123,13 +123,13 @@
                 {
                     if (item.Supporter != null)
                     {
-                        if (item.Status != 3)
+                        if (item.Status != 1 && item.Status != 3)
                         {
                             @Html.ActionLink("Edit", "Edit", new { id = item.Id }) <span> | </span>
                         }
                     }
-                    @Html.ActionLink("Details", "Details", new { id = item.Id })<span> | </span>
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    @Html.ActionLink("Details", "Details", new { id = item.Id })
+                    @*@Html.ActionLink("Delete", "Delete", new { id = item.Id })*@
                 }
             </td>
         </tr>
