--- a/LabSem3/Views/Labs/Edit.cshtml
+++ b/LabSem3/Views/Labs/Edit.cshtml
@@ -40,11 +40,13 @@
         </div>
 
         <div class="form-group">
+            <label class="control-label col-md-2">CreatedAt</label>
             <div class="col-md-10">
                 @Model.CreatedAt
             </div>
         </div>
         <div class="form-group">
+            <label class="control-label col-md-2">UpdatedAt</label>
             <div class="col-md-10">
                 @Model.UpdatedAt
             </div>
