--- a/LabSem3/Views/Complaint/Index.cshtml
+++ b/LabSem3/Views/Complaint/Index.cshtml
@@ -125,7 +125,19 @@
                     {
                         if (item.Status != 1 && item.Status != 3)
                         {
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) <span> | </span>
+                            if (User.IsInRole("ADMIN"))
+                            {
+                                if (item.TypeComplaint.TypeRole == "ADMIN" | item.TypeComplaint.TypeRole == "GENERAL")
+                                {
+                                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) <span> | </span>
+
+                                }
+                            }
+                            else
+                            {
+                                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) <span> | </span>
+                            }
+
                         }
                     }
                     @Html.ActionLink("Details", "Details", new { id = item.Id })
