--- a/LabSem3/Views/Complaint/Details.cshtml
+++ b/LabSem3/Views/Complaint/Details.cshtml
@@ -12,9 +12,9 @@
         <div class="panel-body inf-content">
             <div class="row">
 
-                <div class="col-md-10">
+                <div class="col-md-8">
 
-                    <div class="table-responsive">
+                    <div>
                         <table class="table table-user-information">
                             <tbody>
                                 <tr>
