--- a/LabSem3/Views/Department/Index.cshtml
+++ b/LabSem3/Views/Department/Index.cshtml
@@ -66,7 +66,21 @@
                             </select>
                         </div>
                     </div>
-                    
+
+                    @*statusCheck*@
+                    <div style="margin-right: 20px">
+                        <div style="text-align: left">Status</div>
+                        <div class="input-group">
+                            <select class="form-control mr-4" name="statusCheck">
+                                <option selected value="-2">Status...</option>
+                                @foreach (var item in EnumHelper.GetSelectList(typeof(LabSem3.Enum.DepartmentStatusEnum)))
+                                {
+                                    <option @(ViewBag.statusCheck == Int32.Parse(item.Value) ? "selected" : " ") value="@item.Value">@item.Text</option>
+                                }
+                            </select>
+                        </div>
+                    </div>
+
                     <div style="margin-right: 20px">
                         <div style="text-align: left">StartTime</div>
                         <div class="input-group">
