--- a/LabSem3/Views/Document/Delete.cshtml
+++ b/LabSem3/Views/Document/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "Delete";
 }
 
-<h2 style="font-weight: bold;">Delete</h2>
+<h2 style="font-weight: bold;">Delete Document</h2>
 
 <h3 style="color: red;">Are you sure you want to delete this?</h3>
 <div>
-    <h4>Document</h4>
     </br>
     <dl class="dl-horizontal">
         <div class="panel-body inf-content">
