--- a/LabSem3/Views/Labs/Delete.cshtml
+++ b/LabSem3/Views/Labs/Delete.cshtml
@@ -4,80 +4,56 @@
     ViewBag.Title = "Delete";
 }
 
-<h2 style="font-weight: bold;">Delete</h2>
+<h2 style="font-weight: bold;">Delete Lab</h2>
 
 <h3 style="color: red;">Are you sure you want to delete this?</h3>
 <div>
-    <h4>Lab</h4>
-    <hr />
+    </br>
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Account.Email)
-        </dt>
+        <div class="panel-body inf-content">
+            <div class="row">
+                <div class="col-md-10">
+                    <div class="table-responsive">
+                        <table class="table table-user-information">
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <strong>
+                                            <span class="glyphicon glyphicon-user  text-primary"></span>
+                                            Account Email
+                                        </strong>
+                                    </td>
+                                    <td class="text-primary">
+                                        @Model.Account.Email
+                                    </td>
+                                </tr>
 
-        <dd>
-            @Html.DisplayFor(model => model.Account.Email)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Department.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Department.Name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreatedAt)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UpdatedAt)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UpdatedAt)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DeletedAt)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DeletedAt)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.EquipmentId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.EquipmentId)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ScheduleId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ScheduleId)
-        </dd>
-
+                                <tr>
+                                    <td>
+                                        <strong>
+                                            <span class="glyphicon glyphicon-cloud text-primary"></span>
+                                            Department Name
+                                        </strong>
+                                    </td>
+                                    <td class="text-primary">
+                                        @Model.Department.Name
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                    </td>
+                                    <td class="text-primary">
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
