--- a/LabSem3/Views/Complaint/Index.cshtml
+++ b/LabSem3/Views/Complaint/Index.cshtml
@@ -136,7 +136,7 @@
                 {
                     if (item.Supporter != null)
                     {
-                        if (item.Status != 1 && item.Status != 3)
+                        if (item.Status != 3)
                         {
                             if (User.IsInRole("ADMIN"))
                             {
