bach fix template

--- a/LabSem3/Views/Account/Register.cshtml
+++ b/LabSem3/Views/Account/Register.cshtml
@@ -111,7 +111,7 @@
     </div>
 </div>
         <div class="fs-6">
-            <a href="/Account/Login1">Login</a>
+            <a href="/Account/Login">Return Login</a>
         </div>
     }
    
